Remove BOOST_CXX_VERSION guards, require C++23
- Replace conditional BOOST_CXX_VERSION guards with unconditional C++20
  spaceship operators throughout codebase
- Use explicit operator<=> implementations for structs inheriting from
  C structs (TimeTM, TimeVal, TimeSpec, timespec, timeval) to fix Clang
  "implicitly deleted" errors
- Use defaulted operator<=> for other types (TimeT, UniqueId, VersionNumber,
  EnvElement, RsrcUsage)
- Add #include <compare> where needed, remove unnecessary boost/config.hpp

Additional Clang 22 compatibility fixes:
- Move -rdynamic from compile to link options
- Fix invalid UTF-8 ellipsis in mbcompat.h comment
- Fix non-UTF8 Windows-1252 bytes in MapUtf8ToAscii.cpp
- Add [[maybe_unused]] to unused ParseCsv field

Add scripts/release.sh for streamlined releases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,8 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
         -Woverloaded-virtual
         -pthread
         -m64
+    )
+    add_link_options(
         -rdynamic
     )
     add_compile_definitions(
